# Derivative-Console-Calculator

./: .gitignore  .gitmodules  Derivative Console Calculator.sln  LICENSE  README.md
Derivative Console Calculator/: CMakeLists.txt  Derivative Console Calculator.vcxproj  Derivative Console Calculator.vcxproj.filters  title.txt
Derivative Console Calculator/doc/: GoogleTest_Repos.md  Website Guides.md
Derivative Console Calculator/inc/internal/: Derivative.h  Monomial.h  Polynomial.h
Derivative Console Calculator/src/: CMakeLists.txt  Derivative.cpp  Monomial.cpp  Polynomial.cpp  Polynomial.h  main.cpp
Derivative Console Calculator/test/: CMakeLists.txt  Derivative_t.cpp  Monomial_t.cpp  Polynomial_t.cpp
